Fixed H1 responsivness, hopefully fixed sections marked highlight on portrait view, changes variables with var to let, fixed some white space between brackets.

--- a/css/styles.css
+++ b/css/styles.css
@@ -237,25 +237,40 @@ section.your-active-class .landing__container::after {
 	}
 }
 
+@media only screen and (max-width: 840px) {
+    h1 {
+        font-size: 4.1em;
+    }
+}
+
+@media only screen and (max-width: 463px) {
+    h1 {
+        font-size: 3.5em;
+    }
+}
+
+
 @media only screen and (max-width: 414px) {
+    h1 {
+        font-size: 2.9em;
+    }
+
     li.menu__link {
         font-size: .85em;
     };
 }
 
 @media only screen and (max-width: 352px) {
+    h1 {
+        font-size: 2.6em;
+    }
+
     li.menu__link {
         font-size: .77em;
     };
 }
 
-@media only screen and (max-width: 351px) {
-    li.menu__link {
-        font-size: .73em;
-    };
-}
-
-@media only screen and (max-width: 303px) {
+@media only screen and (max-width: 320px) {
     li.menu__link {
         font-size: .70em;
     };
